# EncryptedMessenger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/client/: CLI.h  Client.h  MessageHandler.h
include/crypto/: CryptoManager.h  KeyManager.h
include/network/: MessageHandler.h  TcpConnection.h  TcpServer.h
include/server/: MessageStore.h  Server.h  Session.h
include/storage/: FileStorage.h
include/utils/: ClientTestContext.h  JsonUtils.h  Logger.h  base64.h
src/: main_client.cpp
src/client/: CLI.cpp  Client.cpp  MessageHandler.cpp
src/crypto/: CryptoManager.cpp  KeyManager.cpp
src/network/: MessageHandler.cpp  TcpConnection.cpp  TcpServer.cpp
src/server/: MessageStore.cpp  Server.cpp  Session.cpp
src/storage/: FileStorage.cpp
src/utils/: JsonUtils.cpp  Logger.cpp
tests/: ClientTestContext.h  CryptoTests.cpp  NetworkTests.cpp
